--- a/styles/main.css
+++ b/styles/main.css
@@ -32,14 +32,14 @@
     transition: hover 0.5s; }
     .header__top-text:hover {
       color: #9fadc2; }
-  .header .title {
+  .header .header-title {
     position: relative;
     margin: 350px 0 85px;
     font-weight: bold;
     font-size: 60px;
     color: #fff;
     letter-spacing: -1.5px; }
-    .header .title::before {
+    .header .header-title::before {
       content: "";
       width: 35px;
       height: 2px;
@@ -48,7 +48,7 @@
       top: -16px;
       left: 0; }
     @media screen and (max-width: 780px) {
-      .header .title {
+      .header .header-title {
         font-size: 46px;
         margin: 430px 0 10px; } }
   .header a {
@@ -75,13 +75,12 @@
   text-transform: uppercase;
   -webkit-transition: hover 0.5s;
   transition: hover 0.5s; }
+  .nav__link--active {
+    padding: 8px 24px;
+    border-radius: 8px;
+    background-color: rgba(255, 255, 255, 0.1); }
   .nav__link:hover {
     color: #9fadc2; }
-
-.nav .active {
-  padding: 8px 24px;
-  border-radius: 8px;
-  background-color: rgba(255, 255, 255, 0.1); }
 
 .nav .nav-item {
   margin: 16px 0 0 21px;
@@ -104,9 +103,9 @@
       padding-bottom: 32px; }
     .nav__link {
       font-size: 22px; }
-    .nav .active {
-      padding: 0;
-      background-color: inherit; }
+      .nav__link--active {
+        padding: 0;
+        background-color: inherit; }
     .nav .nav-item {
       display: block; } }
 
@@ -483,5 +482,28 @@ body {
 .description {
   font-size: 14px;
   color: #9fadc2; }
+
+.wowUp {
+  position: relative;
+  -webkit-animation-name: animation;
+          animation-name: animation;
+  -webkit-animation-duration: 4s;
+          animation-duration: 4s; }
+
+@-webkit-keyframes animation {
+  from {
+    left: -500px;
+    opacity: 0; }
+  to {
+    left: 0;
+    opacity: 1; } }
+
+@keyframes animation {
+  from {
+    left: -500px;
+    opacity: 0; }
+  to {
+    left: 0;
+    opacity: 1; } }
 
 /*# sourceMappingURL=main.css.map */
