--- a/styles/main.css
+++ b/styles/main.css
@@ -6,7 +6,7 @@
 
 .header {
   position: relative;
-  height: 100vh;
+  height: 100%;
   background-image: url(../images/header.png);
   background-repeat: no-repeat;
   background-size: cover;
@@ -299,7 +299,8 @@ body {
   opacity: 0.8; }
 
 .section {
-  position: relative; }
+  position: relative;
+  height: 100vh; }
 
 .title {
   font-size: 24px;
