--- a/styles/main.css
+++ b/styles/main.css
@@ -33,6 +33,12 @@
         white-space: normal; } }
   .header__text {
     font-size: 16px; }
+  @media screen and (max-height: 420px) {
+    .header__title {
+      font-size: 20px;
+      line-height: 25px; }
+    .header__text {
+      font-size: 12px; } }
 
 .burger {
   position: absolute;
@@ -52,7 +58,7 @@
     margin-top: 51px; }
   @media screen and (max-height: 420px) {
     .control {
-      padding-top: 30px; }
+      padding-top: 20px; }
       .control__tv {
         margin-top: 20px; }
       .control__text {
@@ -63,6 +69,9 @@
   background: radial-gradient(50% 100% at 49.51% -0.97%, rgba(151, 151, 151, 0.74) 0%, rgba(196, 196, 196, 0) 100%);
   opacity: 0.5;
   margin-top: -26px; }
+  @media screen and (min-width: 780px) {
+    .gradient {
+      display: none; } }
 
 .info {
   padding-top: 80px; }
@@ -84,8 +93,8 @@
     .info {
       padding-top: 30px; }
       .info__img {
-        width: 60vmin;
-        height: 60vmin;
+        width: 50vmin;
+        height: 50vmin;
         background-size: contain; } }
 
 .sub {
@@ -150,7 +159,11 @@
     letter-spacing: 1.3px;
     text-transform: uppercase;
     color: #e5e5e5;
-    margin-top: 20px; }
+    margin-top: 20px;
+    -webkit-transition: color 0.3s;
+    transition: color 0.3s; }
+    .sub__detailed:hover {
+      color: #fff; }
   @media screen and (max-height: 630px) {
     .sub__title {
       font-size: 25px;
@@ -263,10 +276,10 @@
       .catch__container {
         margin-bottom: 15px; }
       .catch__title {
-        font-size: 16px; }
+        font-size: 12px; }
       .catch__text {
-        font-size: 12px;
-        line-height: 20px; } }
+        font-size: 10px;
+        line-height: 17px; } }
 
 * {
   -webkit-box-sizing: border-box;
@@ -315,6 +328,7 @@ body {
   @media screen and (max-height: 420px) {
     .title {
       font-size: 16px;
+      line-height: 20px;
       margin-bottom: 5px; } }
 
 .tv {
@@ -325,6 +339,17 @@ body {
   .tv img {
     width: 100%;
     height: 100%; }
+  @media screen and (min-width: 780px) {
+    .tv {
+      position: relative;
+      width: 600px;
+      height: 100%;
+      margin: 80px auto 0;
+      background-image: url("../images/img33.png");
+      background-repeat: no-repeat;
+      background-size: contain; }
+      .tv img {
+        display: none; } }
   @media screen and (max-width: 359px) {
     .tv {
       width: 100%;
@@ -344,7 +369,11 @@ body {
   background-color: #23c3b2;
   border-radius: 5px;
   width: 200px;
-  padding: 21px 0; }
+  padding: 21px 0;
+  -webkit-transition: background-color 0.3s;
+  transition: background-color 0.3s; }
+  .btn:hover {
+    background-color: cyan; }
   @media screen and (max-height: 420px) {
     .btn {
       width: 100px;
