--- a/styles/main.css
+++ b/styles/main.css
@@ -163,6 +163,8 @@
     transition: color 0.3s; }
     .sub__detailed:hover {
       color: #fff; }
+    .sub__detailed:focus {
+      color: #fff; }
   @media screen and (max-height: 600px) {
     .sub__title {
       font-size: 25px;
@@ -192,7 +194,8 @@
         width: 100%;
         margin-top: 5px; }
       .sub__price {
-        font-size: 12px; }
+        font-size: 12px;
+        padding-top: 20px; }
       .sub__btn {
         margin-top: 12px; }
       .sub__info {
@@ -275,19 +278,20 @@
     .catch {
       margin-top: 20px; }
       .catch__container {
-        margin-bottom: 10px; }
+        margin-bottom: 5px; }
         .catch__container:last-of-type {
           margin-bottom: 0; }
       .catch__title {
         font-size: 12px;
         margin-bottom: 2px; }
       .catch__text {
-        font-size: 10px;
+        font-size: 8px;
         line-height: 17px; } }
 
 * {
   -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
+          box-sizing: border-box;
+  outline: none; }
 
 a {
   color: #fff;
@@ -307,7 +311,7 @@ body {
   z-index: 2; }
   @media screen and (min-width: 780px) {
     .wrapper {
-      width: 500px; } }
+      width: 400px; } }
   @media screen and (max-width: 359px) {
     .wrapper {
       width: 100%;
@@ -364,7 +368,8 @@ body {
   @media screen and (max-height: 500px) {
     .tv {
       width: 78vmin;
-      height: 45vmin; } }
+      height: 45vmin;
+      margin: 30px auto 10px; } }
 
 .btn {
   display: block;
@@ -381,6 +386,13 @@ body {
   transition: background-color 0.3s; }
   .btn:hover {
     background-color: cyan; }
+  .btn:focus {
+    background-color: cyan; }
+  @media screen and (max-height: 600px) {
+    .btn {
+      width: 150px;
+      padding: 12px 0;
+      font-size: 8px; } }
   @media screen and (max-height: 500px) {
     .btn {
       width: 100px;
